# well_desk

./: README.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 20240909_000001_create_core_tables.py
backend/app/: main.py  settings.py
backend/app/components/: database.py  llm.py
backend/app/dto/: __init__.py  medication.py  message.py  note.py  profile.py  wellbeing.py
backend/app/models/: __init__.py  medication.py  message.py  note.py  profile.py  wellbeing.py
backend/app/repositories/: __init__.py  medication_repository.py  message_repository.py  note_repository.py  profile_repository.py  wellbeing_repository.py
backend/app/routers/: __init__.py  medications.py  messages.py  notes.py  profile.py  wellbeing.py
backend/app/services/: __init__.py  medication_service.py  message_service.py  note_service.py  profile_service.py  wellbeing_service.py
frontend/: .gitignore  index.html  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts  medications.ts  messages.ts  profile.ts  types.ts  wellbeing.ts
frontend/src/components/: AppLayout.tsx  KnowledgeBase.tsx  MedicationRemindersDock.tsx  MessagesPanel.tsx  ProfileForm.tsx  WellbeingForm.tsx
frontend/src/pages/: Home.tsx
frontend/src/routes/: index.tsx
frontend/src/store/: useAppStore.ts
frontend/src/themes/: defaultTheme.ts
